# qaexchange-rs

./: .gitignore  .gitmodules  BUILD_CHECKLIST.md  CHANGELOG.md  Cargo.toml  KLINE_IMPLEMENTATION_SUMMARY.html  KLINE_IMPLEMENTATION_SUMMARY.md  KLINE_TESTING_GUIDE.md  MDBOOK_SETUP.md  QIFI_SUBMODULE_QUICKSTART.md  README.md  book.toml  build.rs  quick_test_api.sh  run_bench.sh  test_market_data_api.sh
benches/: notification_serialization.rs  oltp_storage_bench.rs  storage_bench.rs
config/: exchange.toml  instruments.toml  performance.toml
config/grafana/: qaexchange-dashboard.json
docs/: ACCOUNT_ID_REFACTOR_PLAN.md  API_UPDATES.md  COMPLETION_REPORT.md  KLINE_IMPLEMENTATION_SUMMARY.html  MARKET_OVERVIEW.md  README.md  SUMMARY.md  TODO_IMPLEMENTATION_SUMMARY.md  book.toml
docs/01_getting_started/: README.md  quick_start.md
docs/02_architecture/: README.md  actor_architecture.md  data_models.md  decoupled_storage.md  high_performance.md  system_overview.md  trading_mechanism.md
docs/03_core_modules/: README.md
docs/03_core_modules/cluster/: README.md
docs/03_core_modules/factor/: README.md  wal_persister.md
docs/03_core_modules/market/: README.md  data_production_testing.md  kline.md  snapshot_generator.md  testing.md
docs/03_core_modules/matching/: README.md  benchmark.md  stress_testing.md  testing.md
docs/03_core_modules/notification/: architecture.md  subscription.md
docs/03_core_modules/storage/: compression.md  index.md  memtable.md  query_engine.md  replication.md  sstable.md  wal.md
docs/04_api/: README.md  admin_integration.md  error_codes.md
docs/04_api/http/: admin_api.md  user_api.md
docs/04_api/websocket/: diff_protocol.md  protocol.md  quick_start.md
docs/05_integration/: README.md  diff_protocol.md  serialization.md
docs/05_integration/frontend/: api_guide.md  integration_checklist.md  integration_guide.md
docs/06_development/: KLINE_IMPLEMENTATION_SUMMARY.md  README.md  deployment.md  observability_guide.md  testing.md  tls_security_guide.md  websocket_integration.md
docs/07_reference/: README.md  benchmarks.md  faq.md  feature_matrix.md  glossary.md  performance.md
docs/08_advanced/: README.md  ROADMAP_2025_2026.md
docs/08_advanced/diff_test_reports/: main_report.md
docs/08_advanced/implementation_summaries/: kline_system.md  management_features.md  market_data.md
docs/08_advanced/phase_reports/: phase_12_13.md  phase_6_7.md  phase_8.md
docs/08_advanced/technical_deep_dive/: market_data_enhancement.md
docs/09_archive/: BACKEND_ADMIN_SUMMARY.md  COMPLETE_FEATURE_SCENARIOS.md  DEVELOPMENT.md  README.md  STORAGE_SYSTEM.md
docs/09_archive/historical_reports/: DOCUMENTATION_AUDIT_PLAN.md  DOCUMENTATION_PROGRESS_REPORT.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENT_REORGANIZATION_PLAN.md  FRONTEND_FIX_SUMMARY.md  TODO_FIX_COMPLETION_REPORT.md  TODO_FIX_SUMMARY.md  TODO实现进度报告.md  TODO实现进度报告_最新.md  并发安全性分析.md  本次会话实现报告_2025-10-06.md
docs/09_archive/old_notification/: CHANGELOG.md  DOCUMENTATION_OPTIMIZATION_SUMMARY.md  ITERATIONS.md  README.md
docs/09_archive/old_plans/: INTEGRATION_COMPLETE.md  P1_P2_IMPLEMENTATION_SUMMARY.md  diff_implementation_roadmap.md  diff_integration.md  exchange_refactor_plan.md  websocketdiff协议.md
docs/09_archive/old_storage/: 01_STORAGE_ARCHITECTURE.md  02_DISTRIBUTION_ARCHITECTURE.md  03_RECOVERY_DESIGN.md  04_IMPLEMENTATION_PLAN.md  README.md  (+4 more)
docs/audit/: trading_calculation_audit.md
docs/protocol/: IMPLEMENTATION_PLAN.md  README.md
examples/: benchmark_million_orders.rs  benchmark_storage_system.rs  client_demo.rs  decoupled_storage_demo.rs  full_trading_demo.rs  high_performance_demo.rs  notification_demo.rs  start_exchange.rs  storage_integration_demo.rs  stress_test.rs  test_snapshot_generator.rs
proto/: replication.proto
scripts/: market_status.sh  setup_qifi_submodule.sh
src/: lib.rs  main.rs
src/account/: mod.rs
src/cluster/: consistent_hash.rs  mod.rs
src/core/: account_ext.rs  mod.rs  order_ext.rs
src/dsl/: ast.rs  grammar.pest  mod.rs  parser.rs
src/exchange/: account_mgr.rs  capital_mgr.rs  conditional_order.rs  exchange_types.rs  id_generator.rs  instrument_registry.rs  mod.rs  order_router.rs  priority_queue.rs  settlement.rs  trade_gateway.rs  trading_session.rs  user_mgr.rs
src/factor/: dag.rs  engine.rs  factor_actor.rs  mod.rs  state.rs  view.rs  wal_persister.rs
src/ipc/: manager.rs  mod.rs  production.rs  publisher.rs  subscriber.rs  types.rs
src/market/: broadcaster.rs  cache.rs  data_production_tests.rs  kline.rs  kline_actor.rs  mod.rs  recovery.rs  snapshot_broadcaster.rs  snapshot_generator.rs
src/matching/: auction.rs  engine.rs  high_perf.rs  mod.rs  trade_recorder.rs
src/notification/: broker.rs  gateway.rs  message.rs  mod.rs
src/observability/: metrics.rs  mod.rs  tracing.rs
src/perf/: cpu_affinity.rs  memory_pool.rs  mod.rs  spsc.rs
src/protocol/: ipc_messages.rs  mod.rs
src/query/: engine.rs  hybrid.rs  mod.rs  router.rs  scanner.rs  types.rs  unified.rs
src/replication/: failover.rs  grpc.rs  heartbeat.rs  mod.rs  protocol.rs  replicator.rs  role.rs  tls.rs
src/risk/: mod.rs  pre_trade_check.rs  risk_monitor.rs
src/service/: INTEGRATION_SUMMARY.md  mod.rs
src/storage/: mod.rs  recovery.rs  subscriber.rs  unified_recovery.rs
src/user/: mod.rs  recovery.rs  user_manager.rs
src/utils/: config.rs  jwt.rs  logger.rs  metrics.rs  mod.rs
tests/: exchange_integration_test.rs  network_integration_test.rs  notification_integration_test.rs  test_all_scenarios.py  test_bidirectional_trade.py  trading_scenario_test.rs
todo/: TODO_EXCHANGEMSG.md  TODO_FIX_PLAN.md
web/: .env.development  .env.production  COMPLETION_SUMMARY.md  ENHANCEMENT_PLAN.md  FRONT_FIX_SUMMARY.md  HQCHART_INTEGRATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MARKET_API_DOCUMENTATION.md  QIFI_JS_INTEGRATION.md  QUICK_TEST.md  README.md  TESTING_GUIDE.md  WEBSOCKET_INTEGRATION.md  package-lock.json  package.json  start_dev.sh  vue.config.js
web/public/: index.html
web/src/: App.vue  main.js
(+128 files in other folders)
